--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -272,6 +272,11 @@
         "title-27": "Workshops Days – January 27",
         "venue-27": "Pathé Balexert",
         "adress-27": "Av. Louis-Casaï 27, 1209 Vernier",
+        "description-title": "Description",
+        "time-title": "Time",
+        "equipement-title": "Equipement",
+        "activities-title": "Activities",
+        "topics-title": "Topics",
         "workshops": [
           {
             "title": "Workshop 1: INFRA",
@@ -293,7 +298,7 @@
             ]
           },
           {
-            "title": "Workshop 2: Edge AI",
+            "title": "Workshop 2 : Edge AI",
             "description": "In an increasingly connected world, the ability to process data at the source, closer to where it is generated, has become crucial. This workshop provides a comprehensive but concise overview of Edge AI, focusing on the devices, methods, and tools that make this technology a game-changer. Participants will explore how Edge AI enables real-time data processing, reduces latency, and enhances privacy by minimizing the need to send data to the cloud. By the end of this workshop, participants will have a broad understanding of the fundamental aspects of Edge AI, empowering them to explore and implement these technologies in their own projects.",
             "schedule": {
               "time": "9h00 to 17h",
@@ -310,7 +315,7 @@
             ]
           },
           {
-            "title": "Workshop 3: Retrieval-Augmented Generation (RAG)",
+            "title": "Workshop 3 : Retrieval-Augmented Generation (RAG)",
             "description": "The Retrieval-Augmented Generation (RAG) framework combines retrieval and generation within large language models (LLMs) to produce context-aware and informative responses. This workshop offers a technical introduction to RAG, including concrete examples of its application in enhancing knowledge management systems. Participants will also explore self-hosting LLMs to ensure privacy and security in the deployment of generative AI technologies. By the end of the workshop, participants will be able to query LLMs on the contents of their associated documents, empowering them with the expertise needed to implement RAG in real-world scenarios.",
             "schedule": {
               "time": "2 independent sessions: 9h-12h30 and 13h30-17h",
@@ -324,7 +329,7 @@
             ]
           },
           {
-            "title": "Workshop 4: MLOps",
+            "title": "Workshop 4 : MLOps",
             "description": "This workshop helps participants implement an MLOps process for a Machine Learning experiment, transitioning from a Jupyter notebook to full cloud production. The goal is to provide technical skills for managing the lifecycle of Machine Learning models, promoting team collaboration, and automating operational processes to ensure reproducibility, reliability, and efficient deployment of models in production environments. Participants will also learn best practices for improving the deployment process and moving models out of the experimental phase.",
             "schedule": {
               "time": "9h-12h30 and 13h30-17h",
@@ -343,7 +348,7 @@
       },
       "footer": {
         "title": "Our Platinum partners",
-        "terms": " AI Days. All rights reserved.",
+        "terms": " HES-SO. All rights reserved.",
         "partenaire-1": "https://www.mobiliere.ch",
         "partenaire-2": "https://www.ehl.edu",
         "partenaire-3": "https://www.hes-so.ch"
