add events locations on contact page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -168,6 +168,25 @@
       },
       "contact": {
         "title": "Contact",
+        "venue-title": "Event locations",
+        "venue-cfa": "Download PDF",
+        "venue-google-maps": "Open Google Maps",
+        "venue": [
+          {
+            "title": "Balexert Pathé, Vernier",
+            "date": "Date : 27 & 28 January 2025",
+            "adress": "Adress : Av. Louis-Casaï 27, 1209 Vernier",
+            "googleMapsLink": "https://maps.app.goo.gl/BDuPiKqwpNU99sah9"
+
+          },
+          {
+            "title": "EHL Hospitality Business School, Lausanne",
+            "date": "Date : 29 January 2025",
+            "adress": "Adress : Route de Berne 301, 1000 Lausanne 25",
+            "googleMapsLink": "https://maps.app.goo.gl/5ZtL6i7KNGeeAYdA8"
+
+          }
+        ],
         "contact_title": "Organisation Committee",
         "members": [
           {
@@ -271,7 +290,6 @@
       "workshops": {
         "title-27": "Workshops Days – January 27",
         "venue-27": "Pathé Balexert",
-        "adress-27": "Av. Louis-Casaï 27, 1209 Vernier",
         "description-title": "Description",
         "time-title": "Time",
         "equipement-title": "Equipement",
