--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -168,6 +168,24 @@
       },
       "contact": {
         "title": "Contact",
+        "venue-title": "Lieux des événements",
+        "venue-cfa": "Télécharger PDF",
+        "venue-google-maps": "Ouvrir Google Maps",
+        "venue": [
+          {
+            "title": "Balexert Pathé, Vernier",
+            "date": "Date : 27 & 28 Janvier 2025",
+            "adress": "Adresse : Av. Louis-Casaï 27, 1209 Vernier",
+            "googleMapsLink": "https://maps.app.goo.gl/BDuPiKqwpNU99sah9"
+          },
+          {
+            "title": "EHL Hospitality Business School, Lausanne",
+            "date": "Date : 29 Janvier 2025",
+            "adress": "Adresse : Route de Berne 301, 1000 Lausanne 25",
+            "googleMapsLink": "https://maps.app.goo.gl/5ZtL6i7KNGeeAYdA8"
+
+          }
+        ],
         "contact_title": "Comité d'organisation",
         "members": [
           {
@@ -271,7 +289,6 @@
       "workshops": {
         "title-27": "Journée des Workshops – 27 Janvier",
         "venue-27": "Pathé Balexert",
-        "adress-27": "Av. Louis-Casaï 27, 1209 Vernier",
         "description-title": "Description",
         "time-title": "Temps",
         "equipement-title": "Equipements",
